<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BarCodeTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="on">Open Service</string>
    <string name="off">Close Service</string>
    <string name="update">Update</string>
    <string name="text"> </string>
    <string name="nothing">Nothing</string>
    <string name="working">Reading</string>
    <string name="reading_apps">Loading data, please wait</string>
    <string name="toast">No data to update</string>
    <string name="clear">Clear</string>
    <string name="reload">Reload</string>
    <string name="scan">Scan</string>
    <string name="exit">Exit</string>

</resources>