<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="5dip"
    android:orientation="vertical" >
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button android:id="@+id/scan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/scan" />
        <Button android:id="@+id/exit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/exit" />
       
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button android:id="@+id/update"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/update" />
        <Button android:id="@+id/clear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/clear" /> 
        
    </LinearLayout>
    
    <ScrollView android:id="@+id/scrollview"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:background="#FFE7BA"
    	android:orientation="vertical" >
    
    	<TextView android:id="@+id/textview"
        	android:layout_height="wrap_content"
        	android:layout_width="fill_parent"
        	android:text="@string/text" />
     
	</ScrollView>
    
</LinearLayout>